# led-light-box

./: .gitignore  Cargo.toml  build.sh  upload.sh
benches/: benchmark-main.rs
lightbox/: Cargo.toml
lightbox/src/: lib.rs
neopixels/: Cargo.toml
neopixels/src/: display.rs  main.rs
real/: Cargo.toml  main.rs
rpi-ws281x-display/: Cargo.toml
rpi-ws281x-display/src/: lib.rs
rpi-ws281x-display/src/animations/: aaron.rs  letters.rs  mod.rs  snider.rs
rpi-ws281x-rust/: .travis-ci.sh  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  build.sh
rpi-ws281x-rust/.cargo/: config
rpi-ws281x-rust/src/: lib.rs
rpi-ws281x-rust/src/channel/: builder.rs  mod.rs
rpi-ws281x-rust/src/controller/: builder.rs  controller.rs  mod.rs
rpi-ws281x-rust/src/rpi_ws281x/: .gitignore  README.md  SConstruct  clk.h  dma.c  dma.h  gpio.h  linux.py  mailbox.c  main.c  pcm.c  pcm.h  pwm.c  pwm.h  rpihw.c  rpihw.h  ws2811.c  ws2811.h
rpi-ws281x-rust/src/rpi_ws281x/DEBIAN/: control  postinst  postrm
rpi-ws281x-rust/src/rpi_ws281x/golang/: README.md
rpi-ws281x-rust/src/rpi_ws281x/python/: .gitignore  README.md  ez_setup.py  setup.py
rpi-ws281x-rust/src/rpi_ws281x/python/examples/: SK6812_strandtest.py
rpi-ws281x-rust/src/util/: error.rs  mod.rs  raw_color.rs  strip_type.rs
simulator/: Cargo.toml
simulator/benches/: main.rs
simulator/src/: lib.rs  main.rs
src/: benchmark-main.rs  buffer.rs  display.rs  framework.rs  main.rs
src/animation/: buffer.rs  mod.rs  snider.rs
