[package]
name = "simulator"
version = "0.1.0"
authors = ["Daniel Snider <qtipkk@gmail.com>"]

[dependencies]
piston = "0.37.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.47.0"
piston2d-opengl_graphics = "0.53.0"
cgmath = "0.16.1"
num = "0.2.0"

rpi_ws281x_display = { path = "../rpi-ws281x-display" }
lightbox = { path = "../lightbox" }
