[package]
name = "simulator"
version = "0.1.0"
authors = ["Daniel Snider <qtipkk@gmail.com>"]

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.35.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.70.0"
cgmath = "0.17.0"
num = "0.2.0"

rpi_ws281x_display = { path = "../rpi-ws281x-display" }
lightbox = { path = "../lightbox" }

rocket = "0.4.2"
rocket_codegen = "0.4.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
